pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/02-ingress-with-forwardauth.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-forwardauth
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: http://whoami.default.svc/
    nginx.ingress.kubernetes.io/auth-signin: http://whoami.default.svc/oauth2/start?rd=$scheme://$host$request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: X-Foo
spec:
  rules:
  - host: whoami.localhost
    http:
      paths:
      - path: /forwardauth
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
